Adding a paragraph because I forgot git
this will help improve my commits

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
      <li><a href="./recipes/shrimp-and-peanut-butter-noodles.html">Shrimp and Peanut Butter Noodles</a></li>
      <li><a href="./recipes/sweet-and-spicy-gochujang-chicken.html">Sweet and Spicy Gochujang Chicken</a></li>
     </ul>
-   
+    <p>a small paragraph some would say useless I would say its because i forgot how git works :)</p>
   </body>
 </html>
